# wiresense.py

./: .gitignore  LICENSE  README.md  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  🛠️-feature-request.md
.github/workflows/: publish.yml
src/wiresense/: __init__.py  wiresense.py
