[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiresense"
version = "1.0.2"
authors = [
    { name="Saladrian" }
]
description = "Client library for Wiresense"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.9.5",
    "websockets>=16.0"
]

[project.urls]
Homepage = "https://github.com/Wiresense/wiresense.py#readme"
Issues = "https://github.com/Wiresense/wiresense.py/issues"